fix top nav alignment

--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -1,43 +1,125 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+
 }
 
 .flex-container {
     flex-direction: row;
+    width: 100%;
 }
 
 .flex-container .hero {
     background: #1F2937;
-    flex:1;
+    /* flex:1; */
     height: 400px;
-    width: 100%;
+    color: #ffffff;
+}
+
+.menu-container { 
+    padding: 20px 0;
+    background: #1F2937;
+    display: flex;
+    justify-content: center;
+}
+.title {
+    color: #ffffff;
+    font-weight: 600;
+
+}
+.links {
+    display: flex;
+    justify-content: flex-end;
+    flex:1
+}
+
+.menu {
+    display: flex;
+    font-size: 18px;
+    width: 900px;
+    color:  #E5E7EB;
+    justify-content: space-around;
+}
+
+.menu-2,
+.menu-3,
+.social {
+    margin-left: 50px;
+}
+.hero {
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+.hero-content {
+    display: flex;
+    font-size: 18px;
+    width: 900px;
+    color:  #E5E7EB;
+    justify-content: space-around;
 }
 
 .flex-container .projects {
-    flex:1;
-    height: 400px;
-    width: 100%;
+    display: flex;
+    height: 300px;
 }
 
-.flex-container .testimonial {
+h3 {
+    text-align: center;
+    line-height: 100px;
+}
+
+.project {
+    flex: 1;
+    border-radius: 10px;
+    border-width: 10px;
+    width: 20px;
+    height: 20px;
+    border-style:solid;
+    border-color: #3882F6;
+    padding: 80px;
+    margin: 40px;
+}
+
+.flex-container .quote {
     background: #E5E7EB;
-    flex:1;
-    height: 400px;
-    width: 100%;
+    padding-top: 60px;
+    padding-left: 250px;
+    padding-right: 250px;
+    height: 200px;
+    line-height: 50px;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align: justify;
 }
 
 .flex-container .call-to-action {
+    background: #ffffff ;
     flex:1;
-    height: 400px;
-    width: 100%;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
 }
 
+button {
+    background: #3882F6;
+    border-radius: 10px;
+    width: 75%;
+    height: 50%;
+    border-style: none;
+    color: #ffffff;
+}
 
 .flex-container .footer {
     background: #1F2937;
     flex:1;
-    height: 40px;
-    width: 100%;
+    line-height: 50px;
+    height: 50px;
     align-items: center;
     color: #E5E7EB;
+    padding: 1em;
+    text-align: center;
+    font-size:xx-small;
 }
